--- a/styles/style.css
+++ b/styles/style.css
@@ -58,7 +58,7 @@
   position: relative;
   background-image: url("../images/cover.jpg");
   background-repeat: no-repeat;
-  background-size: 125% auto;
+  background-size: 124% 100%;
   background-position: top center;
   color: #fff;
   padding: 165px 50px 50px;
@@ -146,21 +146,27 @@
 
 .lots {
   margin: 180px 24px 0 24px;
-  border: 1px solid #f00;
 }
 
 .section-header {
+  display: block;
   font-size: 40px;
   font-weight: bold;
   text-transform: uppercase;
 }
 
 .lots-header {
+  height: 47px;
   margin-left: 40px;
 }
 
 .lots-card-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  row-gap: 25px;
   margin-top: 27px;
+  margin-bottom: 30px;
   list-style: none;
 }
 
@@ -169,7 +175,69 @@
   min-height: 596px;
 }
 
+.card {
+  position: relative;
+  z-index: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 48px 40px;
+}
+
+.card-type-film {
+  background-image: url("../images/card-lot-01.jpg");
+  background-repeat: no-repeat;
+  background-size: 162% 100%;
+  background-position: center center;
+}
+
+.card-type-book {
+  background-image: url("../images/card-lot-02.jpg");
+  background-repeat: no-repeat;
+  background-size: 162% 100%;
+  background-position: center center;
+}
+
+.card-type-picture {
+  background-image: url("../images/card-lot-03.jpg");
+  background-repeat: no-repeat;
+  background-size: 168% 100%;
+  background-position: center center;
+}
+
+.card-link {
+  height: 100%;
+  text-decoration: none;
+  color: #fff;
+}
+
+.card {
+  height: 100%;
+}
+
+.card-title {
+  font-size: 22px;
+  text-transform: uppercase;
+  text-decoration: underline;
+  line-height: 120%;
+  font-weight: bold;
+}
+
+.card-text {
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 120%;
+}
+
+.lots-look-more-link {
+  font-size: 20px;
+  margin-left: 40px;
+}
+
 .about {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  gap: 72px;
   margin: 120px 24px 0 24px;
   border: 1px solid #0f0;
 }
