--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 96px 50px 96px;
+  padding: 95px 50px 97px;
 }
 
 .header-menu-list {
@@ -275,7 +275,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   align-items: start;
   margin-top: 180px;
-  padding: 0 50px;
+  padding: 0 50px 82px;
 }
 
 .footer-menu-list {
